updates for mid semester

--- a/content/content/extras/06_software_engineering.md.erb
+++ b/content/content/extras/06_software_engineering.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Software Engineering
-homework: 1) Reflection about Software Engineering and you
+homework: 1) Reflection about Software Engineering and you; 2) Complete work on nT 0.8
 desc: We look Computer Science and Software Engineering
 cat: software design
 ---
@@ -10,6 +10,8 @@ cat: software design
 * Read: [What is Computer Science?](http://www.cs.mtu.edu/~john/whatiscs.html)
 * Read: [Is Computer Science Science?](http://www.cs.mtu.edu/~john/jenning.pdf)
 <%= include_topic :hw_reflection_cosi %>
+1. <%= partbadge %> <%= codebadge %> **Complete nt 0.8 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
+
 
 #### Review
 * Let's take a look at the <%= link_to_topic :cs105b_final_deliverables %>
