--- a/content/content/intro/03_syllabus.md.erb
+++ b/content/content/intro/03_syllabus.md.erb
@@ -1,6 +1,7 @@
 ---
 title: Syllabus
 ---
+#### Summary info
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("", "") %>
 <% tbh.row("Instructor", "Pito Salas <pitosalas@brandeis.edu>") %>
