--- a/content/content/lectures/part3/04_scl_cache.md.erb
+++ b/content/content/lectures/part3/04_scl_cache.md.erb
@@ -5,16 +5,19 @@ homework: 1) Complete nT 0.4
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
+**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:C
 
+1. **Presentation Topic Proposal** Each team choose a topic for their tech presentations. These are 30 minute presentations done by the team on a a complicated technical topic. See: <%= link_to_topic :tech_pres %> for more details. Be ready to make your proposal in class today so we can sort out the schedule.
 1. <%= partbadge %> <%= codebadge %> **Complete nt 0.4 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
-1. <%= partbadge %> <%= pdfbadge %> **Presentation Topic Proposal** Each team choose a topic for their tech presentations. These are 30 minute presentations done by the team on a a complicated technical topic. See: <%= link_to_topic :tech_pres %> for more details. <%= team_deliverable "A one/two paragraph writeup on your proposed presentation." %>
 
 #### Valuable, not required, reading
 * [Redis](http://redis.io)
 * [Memcached](http://memcached.org)
 * [Amazon Elastic Cache](http://aws.amazon.com/elasticache/)
 * [Sinatra Cache](https://github.com/kematzy/sinatra-cache)
+
+#### Discussion
+* Decide on Tech Pres schedule
 
 #### Review: Achieving Scale
 * Measuring performance:
