--- a/content/content/lectures/part3/07_scl_queues.md.erb
+++ b/content/content/lectures/part3/07_scl_queues.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "Scaling Patterns: Queueing"
-homework: 1) Read articles and respond to warmup questions;
+homework: 1) Read articles and respond to warmup questions; 2) Complete working on nT 0.6
 desc: Centrality of queuing and message passing concepts in achieving scalable architecture
 cat: scale
 ---
@@ -13,6 +13,9 @@ cat: scale
     * When your system is designed using services (or microservices), they have to communicate with each other. If service one needs an email sent out, and asks service two to do so, somehow that has to be passed from one to two. What are some of the common ways to do this?
     * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
     * <%= deliverable "Submit your responses as a pdf to Latte" %>
+1. **Teams continue to work on nanoTwitter 0.6**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+
+<%= include_topic :weekly_student_pres %>
 
 ### Scalability Pattern: Queueing
 
