--- a/content/content/lectures/part3/08_logging.md.erb
+++ b/content/content/lectures/part3/08_logging.md.erb
@@ -1,16 +1,14 @@
 ---
 title: "Scaling Patterns: Logging"
 desc: Guest Speaker Bob Stachel about TripAdvisor
-homework: 1) nT Team Interim Report; 2) TripAdvisor; 3) Complete work on nT 0.6, begin on nT 0.7
-cat: scale
+homework: 1) nT Team Interim Report; 2) TripAdvisor; 3) Complete work on nT0.7
 ---
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
 1. <%= partbadge %> <%= pdfbadge %> <%= timebadge %> **Trip Advisor**: Experiment with Trip Advisor. Look at the Hotels page for a large city: New York, Paris, London, Tokyo. Enter some dates for a hotel stay and see the prices come up for dozens of hotels. Think about what is behind that.
-
-    One fact to start with, that makes it even more complicated,  is - TripAdvisor is not a travel agency. It does not manage the prices or availability for these hotels, or make the bookings - that is handled by the online travel agencies like Expedia, Orbitz, Travelocity. <%= deliverable "Do some googling and take some guesses about what Trip Advisor's architecture is to handle the prices and availability for hotels" %> **[GRADED FOR PARTICIPATION ONLY]**
-1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> **nT 0.6** Complete nt 0.6 as a team (See: <%= link_to_topic :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for 0.6 in portfolio and github. Submit to Latte the brief project update.) %>
+    One fact to start with, that makes it even more complicated,  is - TripAdvisor is not a travel agency. It does not manage the prices or availability for these hotels, or make the bookings - that is handled by the online travel agencies like Expedia, Orbitz, Travelocity. <%= deliverable "Do some googling and take some guesses about what Trip Advisor's architecture is to handle the prices and availability for hotels" %>
+1. <%= partbadge %> <%= codebadge %> **Complete nt 0.7 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Guest Lecturer
 
