--- a/content/content/lectures/part4/02_good_programming_practices.md.erb
+++ b/content/content/lectures/part4/02_good_programming_practices.md.erb
@@ -1,14 +1,14 @@
 ---
 title: Good Practices
 desc: How to get beyond disposable programs
-homework: 1) learn about "code smells" and point out two smells in your team's nT; 2) Complete nT 0.7
+homework: 1) learn about "code smells" and point out two smells in your team's nT; 3) Continue on 1.0
 cat: software design
 ---
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
 1. <%= pdfbadge %> Read about [Code Smells](http://martinfowler.com/bliki/CodeSmell.html) and [Code Smell](http://en.wikipedia.org/wiki/Code_smell) in wikipedia. Don't stop there. Google for Code Smells and find the most important and common ones. Examine all the code of your nT and locate two code smells that you have uncovered. Correct them and submit the diff, before and after. This is an individual deliverable! <%= deliverable "Write up what smell you found and corrected, and show the diff, before and after" %>
-1. <%=partbadge %> <%= codebadge %> <%= pdfbadge %> **nT 0.7** Complete nt 0.7 as a team (See: <%= link_to_topic :nt_outline %>). Write and submit a brief project update as a pdf. What went well, what were the challenges, and what are the remaining problems. <%= team_deliverable %(nT code for 0.7 in portfolio and github. Submit to Latte the brief project update.) %>
+1. **Teams continue to work on nanoTwitter 1.0**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 <%= include_topic :good_programming %>
 <%= include_topic :code_smells %>
