--- a/content/content/intro/10_tech_presentations.md.erb
+++ b/content/content/intro/10_tech_presentations.md.erb
@@ -1,18 +1,27 @@
 ---
 title: Tech Presentations
 ---
+#### Intro
+
 During 6 classes towards the end of the semester, each team will prepare and present an in depth study of a technology or principle that they have independently uncovered and chosen to apply in nanoTwitter.
 
 <%= include_topic :tech_pres %>
 
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("Date", "Presenters", "Topic") %>
-<% tbh.row("", "", "GraphQL") %>
-<% tbh.row("", "", "NoSQL databases") %>
-<% tbh.row("", "", "NodeJS") %>
-<% tbh.row("", "", "Micro Services and SOA") %>
-<% tbh.row("", "", "React or other cliens JS Library") %>
-<% tbh.row("", "", "Push processing and Websockets") %>
-
-
+<% tbh.row("March 22", "", "") %>
+<% tbh.row("March 27", "", "") %>
+<% tbh.row("Mar 29", "", "") %>
+<% tbh.row("April 10", "", "") %>
+<% tbh.row("April 12", "", "") %>
+<% tbh.row("April 17", "", "") %>
 <%= tbh.render %>
+
+##### Potential Topics are:
+* React or other client JS library'
+* GraphQL
+* Push Processing and Web Sockets
+* NoSQL Databases
+* Microservices and SOA
+* NodeJS
+* Database Sharing and Paritioning
