--- a/content/content/lectures/part3/01_scaling_twitter.md.erb
+++ b/content/content/lectures/part3/01_scaling_twitter.md.erb
@@ -6,7 +6,7 @@ desc: We begin examining how we would measure and detect scaling problems in nan
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
+**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Code
 
 1. <%= pdfbadge %> **Reading and Watching:** As you read the article and watch the video try to figure out what some of the reasons are for failures in software projects. Are they failings of human nature or failings of science and methodology? Do the authors believe that in the future failure due to software will eventually be eliminated? How do those lessons apply to what happened with the original healthcare.gov web site? Were the problems fundamental computer science related or were they caused by easily avoided human error? Do you think software systems like that are fundamentally more complex and in fact exceed the ability of any individual to grasp? What are the two or three big lessons that you think would be important for any Software Engineer to learn?
     * Read [R.Charette, “Why Software Fails - IEEE Spectrum.”](http://bit.ly/1x5YG1n)
