--- a/content/content/lectures/part3/05_scl_db.md.erb
+++ b/content/content/lectures/part3/05_scl_db.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "Scaling Patterns: DB Tuning"
-desc: Look into how database archirecture will affect performance and scale
+desc: Look into how database architecture will affect performance and scale and how to improve it.
 homework: 1) Database partitioning, warmups; 2) Read articles; 3) Continue work on nT 0.5
 cat: scale
 ---
@@ -8,13 +8,13 @@ cat: scale
 **Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
 
 1. <%= pdfbadge %> <%= timebadge %> <%= partbadge %> **Watch and Read and answer warmup questions**: [Basics of Database Sharding](https://youtu.be/W6pFKihvqH4) and [5 Early Lessons from Rapid High Availability Scaling](http://mikepackdev.com/blog_posts/40-5-early-lessons-from-rapid-high-availability-scaling-with-rails). Don't be concerned that Rails is mentioned, the concepts and principles are fundamental. Please read this and watch this material closely, it is quite important. As you read this please consider the anwers to these warmup questions:
-  * What are some of the ways in which you know that its time to consider sharding or partitioniung your databases?
-  * What is meant by "denormalization" and what does it have to do with scalability?
-  * Can you clarify why the reading/viewing says that you are screwed if you don't create an index early?
-  * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
-  * <%= deliverable "Answer warmups in Latte" %>
+    * What are some of the ways in which you know that its time to consider sharding or partitioniung your databases?
+    * What is meant by "denormalization" and what does it have to do with scalability?
+    * Can you clarify why the reading/viewing says that you are screwed if you don't create an index early?
+    * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
+    * <%= deliverable "Answer warmups in Latte" %>
 1. **Read:** Read these two valuable articles: [Sharding Your Database](http://www.craigkerstiens.com/2012/11/30/sharding-your-database/) and [Diagnosing Common Database Problems](https://www.infoq.com/articles/Diagnosing-Common-Java-Database-Performance-Hotspots)
-1. **nT 0.5**: Teams, continue working on nT 0.5. It will due on Friday!
+1. **Teams continue to work on nanoTwitter 0.5**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Notes and Discussion
 * How is nT 0.5 going? Any obstacles or questions?
@@ -22,6 +22,8 @@ cat: scale
   * How is your test coverage?
   * How is your API? Is it tested?
   * How can you go "beyond the minimum?"
+
+<%= include_topic :weekly_student_pres %>
 
 
 <%= include_topic :scaling_db_tuning %>
