--- a/content/content/lectures/part4/01_cloud_deployment.md.erb
+++ b/content/content/lectures/part4/01_cloud_deployment.md.erb
@@ -1,7 +1,7 @@
 ---
 title: The Cloud
 desc: How is the cloud a central part of modern software engineering?
-homework: 1) Fully complete all work up to nT 0.4; 2) Self and Peer assessments; 3) Read article and do warmups
+homework: 1) ) Self and Peer assessments; 3) Read article and do warmups; 3) Formal review of nT0.8
 cat: scale
 ---
 <%= homework_hdr %>
@@ -13,7 +13,7 @@ cat: scale
     * Thinking about your nanoTwitter team, how close are you to meeting the criteria of Continous Integration laid out in this article?
     * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
     *  <%= deliverable "Post your response to these questions as a pdf on Latte" %>
-1. <%= codebadge %> **Formal graded Checkpoint** Make sure you've completed as a team up to at least nT0.4's requirements (see <%= link_to_topic :nt_outline %>), including the various documentation pieces. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
+1. <%= codebadge %> **Formal graded Checkpoint** Complete nT 0.8. Make sure you've completed as a team up to at least nT0.6's requirements (see <%= link_to_topic :nt_outline %>), including the various documentation pieces because you will be getting detailed feedback. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
 
 <%= include_topic :continuous_integ_deployment %>
 
