Checkpoint work to git

--- a/content/bootstrap/css/custom.css
+++ b/content/bootstrap/css/custom.css
@@ -1,4 +1,5 @@
 @import url("prettyquote.css");
+@import url("full-width-pics.css");
 @import url(//fonts.googleapis.com/css?family=Telex);
 
 .themefg {
