--- a/content/content/intro/10_tech_presentations.md.erb
+++ b/content/content/intro/10_tech_presentations.md.erb
@@ -9,12 +9,12 @@ During 6 classes towards the end of the semester, each team will prepare and pre
 
 <% tbh = TableHelper.new(:normal) %>
 <% tbh.headers("Date", "Presenters", "Topic") %>
-<% tbh.row("March 22", "", "") %>
-<% tbh.row("March 27", "", "") %>
-<% tbh.row("Mar 29", "", "") %>
-<% tbh.row("April 10", "", "") %>
-<% tbh.row("April 12", "", "") %>
-<% tbh.row("April 17", "", "") %>
+<% tbh.row("March 27", "Fantastic Four", "RabbitMQ and Messaging") %>
+<% tbh.row("Mar 29", "Kevin and Japan", "NodeJS") %>
+<% tbh.row("April 10", "Sassy", "Redis vs. MongoDB") %>
+<% tbh.row("April 12", "Team 404", "DB Paritioning and Sharding") %>
+<% tbh.row("April 17", "Skoozy", "Services and Load Balancing") %>
+<% tbh.row("April 19", "Team 200", "GraphQL") %>
 <%= tbh.render %>
 
 ##### Potential Topics are:
