Checkpoint work to git

--- a/content/content/lectures/part3/05_scl_db.md.erb
+++ b/content/content/lectures/part3/05_scl_db.md.erb
@@ -16,6 +16,12 @@ cat: scale
 1. **Read:** Read these two valuable articles: [Sharding Your Database](http://www.craigkerstiens.com/2012/11/30/sharding-your-database/) and [Diagnosing Common Database Problems](https://www.infoq.com/articles/Diagnosing-Common-Java-Database-Performance-Hotspots)
 1. **Teams continue to work on nanoTwitter 0.5**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
+#### Interesting, but not required, reading
+* [Building Scalable Databases: Pros and Cons of Sharding](http://www.25hoursaday.com/weblog/2009/01/16/BuildingScalableDatabasesProsAndConsOfVariousDatabaseShardingSchemes.aspx)
+* [The Basics Of Database Sharding](http://www.brentozar.com/archive/2013/05/the-basics-of-database-sharding/)
+* [Sharding your database](http://www.craigkerstiens.com/2012/11/30/sharding-your-database/)
+* [Gem for Sharding](https://github.com/thiagopradi/octopus)
+
 #### Notes and Discussion
 * How is nT 0.5 going? Any obstacles or questions?
 * What to do if "there's not a lot of coding for me to do?!"
