Checkpoint work to git

--- a/content/content/lectures/part3/06_scl_concur.md.erb
+++ b/content/content/lectures/part3/06_scl_concur.md.erb
@@ -16,6 +16,8 @@ cat: scale
 1. <%= partbadge %> <%= codebadge %> **Complete nt 0.5 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Interesting, but not required, reading
+* [Bullet, a gem to find and fix N+1 Query bugs](https://github.com/flyerhzm/bullet)
+* [Partial Rendering performance in Rails](https://medium.com/@coorasse/partial-rendering-performance-in-rails-101fdfb6ffb9), which has lessons for Sinatra as well!
 
 <%= include_topic :weekly_student_pres %>
 
