Checkpoint work to git

--- a/content/content/lectures/part3/06_scl_concur.md.erb
+++ b/content/content/lectures/part3/06_scl_concur.md.erb
@@ -19,8 +19,9 @@ cat: scale
 * [Bullet, a gem to find and fix N+1 Query bugs](https://github.com/flyerhzm/bullet)
 * [Partial Rendering performance in Rails](https://medium.com/@coorasse/partial-rendering-performance-in-rails-101fdfb6ffb9), which has lessons for Sinatra as well!
 
-<%= include_topic :weekly_student_pres %>
+#### Technical Presentation
 
+<%= callout("Presentation", " Team Fantastic Four will give a technical presentation on RabbitMQ and Messaging") %>
 
 <%= include_topic :scaling_concur %>
 <%= include_topic :scaling_async %>
