Checkpoint work to git

--- a/content/content/lectures/part3/06_scl_concur.md.erb
+++ b/content/content/lectures/part3/06_scl_concur.md.erb
@@ -1,6 +1,6 @@
 ---
 title: "Scaling Patterns: Concurrency"
-desc: Queueing and Concurrency
+desc: "Scaling pattern: Concurrency, Background processing and asynchronous processing"
 homework: 1) Complete nT 0.5; 2) Read article closely, answer warmup questions
 cat: scale
 ---
@@ -18,6 +18,8 @@ cat: scale
 #### Interesting, but not required, reading
 * [Bullet, a gem to find and fix N+1 Query bugs](https://github.com/flyerhzm/bullet)
 * [Partial Rendering performance in Rails](https://medium.com/@coorasse/partial-rendering-performance-in-rails-101fdfb6ffb9), which has lessons for Sinatra as well!
+* [Comparing Background processing Libraries](http://www.sitepoint.com/comparing-ruby-background-processing-libraries-delayed-job/)
+* [Rails Delayed Job Gem](https://github.com/collectiveidea/delayed_job)
 
 #### Technical Presentation
 
