--- a/content/content/lectures/part3/06_scl_concur.md.erb
+++ b/content/content/lectures/part3/06_scl_concur.md.erb
@@ -19,7 +19,7 @@ cat: scale
 * [Bullet, a gem to find and fix N+1 Query bugs](https://github.com/flyerhzm/bullet)
 * [Partial Rendering performance in Rails](https://medium.com/@coorasse/partial-rendering-performance-in-rails-101fdfb6ffb9), which has lessons for Sinatra as well!
 * [Comparing Background processing Libraries](http://www.sitepoint.com/comparing-ruby-background-processing-libraries-delayed-job/)
-* [Rails Delayed Job Gem](https://github.com/collectiveidea/delayed_job)
+* [Nobody Understands the GIL](https://www.jstorimer.com/blogs/workingwithcode/8085491-nobody-understands-the-gil)
 
 #### Technical Presentation
 
