--- a/content/content/lectures/part3/09_scl_soa.md.erb
+++ b/content/content/lectures/part3/09_scl_soa.md.erb
@@ -1,5 +1,5 @@
 ---
-title: SOA and microservices
+title: "Scaling Pattern: SOA and microservices"
 desc: Look at applications of microservices and SOA in building scalable systems. Consider risks and benefits.
 homework: 1) Read Parnas Paper; 2) Read Microservices Article and respond to warmups; 3) Continue working on nT 0.8
 cat: scale
@@ -18,7 +18,7 @@ cat: scale
   * Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, which two ideas or concepts that you think are particularly interesting? Please make it clear whether it's a confusion or an insight.
   * <%= deliverable "Submit your responses as a pdf to Latte" %>
 1. **Read**: [Introduction to Architecting Systems for Scale](http://lethain.com/introduction-to-architecting-systems-for-scale/)
-1. **Teams continue to work on nanoTwitter 0.8**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+1. **Teams continue to work on nanoTwitter 0.7**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 <%= include_topic :weekly_student_pres %>
 
