Checkpoint work to git

--- a/content/content/lectures/part3/07_scl_queues.md.erb
+++ b/content/content/lectures/part3/07_scl_queues.md.erb
@@ -15,7 +15,15 @@ cat: scale
     * <%= deliverable "Submit your responses as a pdf to Latte" %>
 1. **Teams continue to work on nanoTwitter 0.6**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
-<%= include_topic :weekly_student_pres %>
+#### Important, but not mandatory reading
+* [RabbitMQ Tutorial](https://www.rabbitmq.com/tutorials/tutorial-one-ruby.html)
+* [Rabbit Demo (github)](https://github.com/Cosi-105/rabbit_demo)
+* [Ruby Concurrency Explained](http://merbist.com/2011/02/22/concurrency-in-ruby-explained/)
+
+
+#### Tech Presentation
+
+<%= callout("Tech Pres",  " Kevin and Japan will tell us all about NodeJS" ) %>
 
 ### Scalability Pattern: Queueing
 
