Checkpoint work to git

--- a/content/content/lectures/part4/01_cloud_deployment.md.erb
+++ b/content/content/lectures/part4/01_cloud_deployment.md.erb
@@ -15,6 +15,16 @@ cat: scale
     *  <%= deliverable "Post your response to these questions as a pdf on Latte" %>
 1. <%= codebadge %> **Formal graded Checkpoint** Complete nT 0.7. Make sure you've completed as a team up to at least nT0.6's requirements (see <%= link_to_topic :nt_outline %>), including the various documentation pieces because you will be getting detailed feedback. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
 
+#### Interesting but not required reading
+* [Deploy from Codeship.io to Heroku](https://www.codeship.io/documentation/tutorials/continuous-deployment-heroku-github-ruby-rails/)
+* [Details about Continuous Integration](http://martinfowler.com/articles/continuousIntegration.html)
+* [Marin Fowler on Feature Toggle](http://martinfowler.com/bliki/FeatureToggle.html)
+* [Fearure Switches at Flickr](http://code.flickr.net/2009/12/02/flipping-out/)
+
+#### Tech Presentation
+
+<%= callout("Tech Pres",  " Team 404 will teach us about DB Partitioning and Sharding" ) %>
+
 <%= include_topic :continuous_integ_deployment %>
 
 #### Discussion
