Checkpoint work to git

--- a/content/content/lectures/part1/01_welcome.md.erb
+++ b/content/content/lectures/part1/01_welcome.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Welcome
-desc: Introductions and logistics
+desc: Introductions and logistics; we talk about how the course will work, grading, lectures, homeworks and so 
 homework: 1) Make sure your computer is properly set up! 2) Begin working on the ruby Programming Assignment
 cat: general
 homework: 1) Setup linux if needed; 2) Install Ruby; 3) Go through Ruby the hard way
