--- a/content/content/lectures/part3/09_scl_soa.md.erb
+++ b/content/content/lectures/part3/09_scl_soa.md.erb
@@ -30,8 +30,7 @@ cat: scale
 
 <%= callout("Tech Pres",  " Team Sassy about Redis vs. MongoDB" ) %>
 
-#### Review of SOA
-
+#### SOA / Microservices / Monolith
 <img src="http://www.martinfowler.com/articles/microservices/images/sketch.png" width="500" align="right">
 
 * Contrast with [Majestic Monolith](https://m.signalvnoise.com/the-majestic-monolith-29166d022228#.cm2vu12s8)
@@ -39,14 +38,21 @@ cat: scale
   * Suite of small services
   * Each running in a separate process
   * Communicating with lightweight mechanisms
-  * Relying on internal REST Apis
+  * Relying on internal REST Apis or Queues or Both
+* Scaling up vs. Scaling out
+* Beware of **premature optimization!**
+
+##### Organize around business capabilities
 * Conway's law  simply states that
 
   "Any organization that designs a system (defined more broadly here than just information systems) will inevitably produce a design whose structure is a copy of the organization's communication structure" (see [Conway's Law](http://www.melconway.com/Home/Committees_Paper.html))
 
-#### Communication
+* Decentralized Governance
+
+##### Communication
 * Trade-offs in communications between services
 * "Smart endpoints and dumb pipes" - End to end principle
+* What would "Smart pipes and dumb endpoints" mean? (see POTS)
 
 ##### "Unix Philosophy"
 * **Unix Philosophy** (See [Wikipedia](https://en.wikipedia.org/wiki/Unix_philosophy)). Summarized by [Peter Salus](https://en.wikipedia.org/wiki/Peter_H._Salus): (not [Pito Salas](https://en.wikipedia.org/wiki/Pito_Salas)):
@@ -54,7 +60,7 @@ cat: scale
   * Write programs to work together.
   * Write programs to handle text streams, because that is a universal interface.
 
-**\<INTERLUDE\>**
+#####\<interlude>
 
 <%= code_begin %>
 ps aux | grep ruby | grep -v grep | ruby -n -e 'puts $_.split[1]' | xargs kill
@@ -63,7 +69,7 @@ ps aux | grep ruby | grep -v grep | ruby -n -e 'puts $_.split[1]' | xargs kill
  * [Source of example](http://unix.stackexchange.com/questions/30759/whats-a-good-example-of-piping-commands-together)
  * [Using Ruby instead of Awk](http://nithinbekal.com/posts/ruby-sed-awk/)
 
- **\</INTERLUDE\>**
+#####\</interlude\>
 
 ##### Famous (and valuable) Law: "Postel's Principle"
   * Postel WROTE the early specification of TCP!
@@ -71,44 +77,6 @@ ps aux | grep ruby | grep -v grep | ruby -n -e 'puts $_.split[1]' | xargs kill
   * Often restated as the [Robustness Principle](https://en.wikipedia.org/wiki/Robustness_principle)
   * Some people don't agree: [Postel's Principle is a Bad Idea](https://programmingisterrible.com/post/42215715657/postels-principle-is-a-bad-idea)
 <%= callout("Postel's Principle", " TCP implementations should follow a general principle of robustness: be conservative in what you do, be liberal in what you accept from others.") %>
-
-* Options for communication
-  * Direct REST Api Calls
-  * Message Queueing
-  * Database tables
-  * Files
-* Considerations
-
-  * Services need to be "discovered"
-  * Services can be offline (crashed)
-  * Permanently or temporarily
-  * Handling of errors and time-outs
-  * Monitoring and troubleshooting
-  * Disaster Recovery
-* Timeouts on Services
-  * What does a timeout mean?
-  * Retrying with backoff
-  * [Circuit Breaker](http://martinfowler.com/bliki/CircuitBreaker.html)
-
-#### Exercise
-* Work in groups
-* Come up with a specific idea, with implementation details
-* One service (other than emailing) that nanoTwitter could have
-* [How to do services in Heroku](https://www.rdegges.com/2014/heroku-and-soa/)
-
-#### Devops
-* Infrastructure management is automated as much as possible
-* CI (Continuous integration) very typical
-* Everything is "programmed" (scripts)
-  * Provisioning a server
-  * De-provisioning a server
-  * Updating software for an individual service
-  * Rollback of anything
-  * Backups and recovery
-  * Switching between data centers
-  * Monitoring and management
-* Using SSH is a sign of incomplete automation
-* Major categories of tools
 
 #### Design Considerations
 <img src="http://www.martinfowler.com/articles/microservices/images/decentralised-data.png" width="500" align="right">
@@ -135,6 +103,38 @@ ps aux | grep ruby | grep -v grep | ruby -n -e 'puts $_.split[1]' | xargs kill
   * Any service can be replaced by new code with (no/minimal) impact on other services
   * Each service can be designed and tested independently from the others
   * Failure in one service is kept isolated
+
+##### Things to think about
+* Services need to be "discovered"
+* Services can be offline (crashed)
+* Permanently or temporarily
+* Handling of errors and time-outs
+* Monitoring and troubleshooting
+* Disaster Recovery
+* Timeouts on Services
+* What does a timeout mean?
+* Retrying with backoff
+* [Circuit Breaker](http://martinfowler.com/bliki/CircuitBreaker.html)
+
+#### Exercise
+* Work in groups
+* Come up with a specific idea, with implementation details
+* One service (other than emailing) that nanoTwitter could have
+* [How to do services in Heroku](https://www.rdegges.com/2014/heroku-and-soa/)
+
+#### Devops
+* Infrastructure management is automated as much as possible
+* CI (Continuous integration) very typical
+* Everything is "programmed" (scripts)
+  * Provisioning a server
+  * De-provisioning a server
+  * Updating software for an individual service
+  * Rollback of anything
+  * Backups and recovery
+  * Switching between data centers
+  * Monitoring and management
+* Using SSH is a sign of incomplete automation
+* Major categories of tools
 
   #### Next Class
   * Look at homework: <%= link_to_next_lecture %>
