Checkpoint work to git

--- a/content/content/lectures/part4/01_cloud_deployment.md.erb
+++ b/content/content/lectures/part4/01_cloud_deployment.md.erb
@@ -5,7 +5,7 @@ homework: 1) ) Self and Peer assessments; 3) Read article and do warmups; 3) For
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
+**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Code
 
 <%= include_topic :hw_self_peer_assess_v3 %>
 {:start="2"}
@@ -16,6 +16,7 @@ cat: scale
 1. <%= codebadge %> **Formal graded Checkpoint** Complete nT 0.7. Make sure you've completed as a team up to at least nT0.6's requirements (see <%= link_to_topic :nt_outline %>), including the various documentation pieces because you will be getting detailed feedback. <%= team_deliverable "Update the github repo, zip up the directory and submit to latte."%>
 
 #### Interesting but not required reading
+* [Sharing Heroku Postgres Between Applications](https://devcenter.heroku.com/articles/heroku-postgresql#sharing-heroku-postgres-between-applications)
 * [Deploy from Codeship.io to Heroku](https://www.codeship.io/documentation/tutorials/continuous-deployment-heroku-github-ruby-rails/)
 * [Details about Continuous Integration](http://martinfowler.com/articles/continuousIntegration.html)
 * [Marin Fowler on Feature Toggle](http://martinfowler.com/bliki/FeatureToggle.html)
