--- a/content/content/lectures/part3/09_scl_soa.md.erb
+++ b/content/content/lectures/part3/09_scl_soa.md.erb
@@ -5,7 +5,7 @@ homework: 1) Read Parnas Paper; 2) Read Microservices Article and respond to war
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Code | <%=zipbadge %>: Zipped
 
 <img src="http://site.xavier.edu/polt/typewriters/underwood5small.jpg" align="right" width="128">
 
