--- a/content/content/lectures/part4/06_software_engineering.md.erb
+++ b/content/content/lectures/part4/06_software_engineering.md.erb
@@ -5,10 +5,11 @@ desc: We look Computer Science and Software Engineering
 cat: software design
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
+**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Code | <%=zipbadge %>: Zipped
 
 * Read: [What is Computer Science?](http://www.cs.mtu.edu/~john/whatiscs.html)
 * Read: [Is Computer Science Science?](http://www.cs.mtu.edu/~john/jenning.pdf)
+
 <%= include_topic :hw_reflection_cosi %>
 
 #### Tech Presentation
