--- a/content/content/lectures/part4/07_load_testing.md.erb
+++ b/content/content/lectures/part4/07_load_testing.md.erb
@@ -2,7 +2,7 @@
 title: Load Testing
 cat: scale
 homework: 1) Teams complete nanoTwitter 1.0!
-desc: The scalability runoff is performed
+desc: We will test all the nanoTwitters for scalability. This can be fun and chaotic. Sometimes ca·thar·tic.
 ---
 <%= homework_hdr %>
 
