--- a/content/content/lectures/part4/09_last_class.md.erb
+++ b/content/content/lectures/part4/09_last_class.md.erb
@@ -1,18 +1,12 @@
 ---
 title: Last class!
-desc: Food, demos and discussions
+desc: Finish up scalability tests if needed. And we will have food!
 homework: 1) Do your peer and team assessments. 2) Finish and submit your final deliverables
 cat: general
 ---
 
-<%= homework_hdr %>
+* Finish up <%= link_to_topic :scalability_runoff %>
 
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Dropbox
+#### T.H.E. E.N.D.
 
-* <%= partbadge %> <%= pdfbadge %> <%= include_topic :hw_self_peer_assess_v3 %>
-
-### There will be some food!
-
-<%= include_topic :scalability_runoff %>
-
-### THANKS! To everyone and especially our TAs!
+<blockquote class="pretty">THANKS! It's been quite a journey. Each team pushed themsleves in different ways giving us the richest set of nanoTwitters that we've had over the years I have taught this. Well done! To everyone and especially our TAs!</blockquote>
