Checkpoint work to git

--- a/content/content/lectures/part4/09_last_class.md.erb
+++ b/content/content/lectures/part4/09_last_class.md.erb
@@ -1,12 +1,24 @@
 ---
 title: Last class!
 desc: Finish up scalability tests if needed. And we will have food!
-homework: 1) Do your peer and team assessments. 2) Finish and submit your final deliverables
+homework:  None
 cat: general
 ---
 
-* Finish up <%= link_to_topic :scalability_runoff %>
+#### Final Deliverables
+
+A quick review and update:
+
+1. All deliverables are due **midnight April 27** (Friday), see <%= link_to_topic :cs105b_final_deliverables %>. Your submissions are mostly contained in your github repo. You will put the url of your github repo in the submission in Latte.Those of you who have had several github repos or had some accident with losing information, you need to give us your "official single submission" which is the only one we will review for feedback and grading. Please take the time to neaten it up so that it is presentable and professional. It should include:
+    1. All your code, client code, server code, services, everything. You can refer to "How it will be evaluated" if you make sure you have everything covered. Also don't make it a treasure hunt for us to find stuff.
+    1. Your README file, including of course all the version by version notes with what was done and who did them and a codeclimate badge.
+    1. Well done "Portfolio Page (as described elsehwere.) Students often leave this for the last minute and throw something random together. We do look at this and it does affect your grade so give it appropriate attention.
+    1. And your fully running nanoTwitter deployed to Heroku so we can test it.
+
 
 #### T.H.E. E.N.D.
 
-<blockquote class="pretty">THANKS! It's been quite a journey. Each team pushed themsleves in different ways giving us the richest set of nanoTwitters that we've had over the years I have taught this. Well done! To everyone and especially our TAs!</blockquote>
+* Finish up <%= link_to_topic :scalability_runoff %>
+* We will have Loader.IO set up with all of your sites wired up and should be able to go through them more efficiently.
+
+<blockquote class="pretty">THANKS! It's been quite a journey. Each team pushed themsleves in different ways giving us the richest set of nanoTwitters that we've had over the years I have taught this. Well done! Thanks to everyone and especially our TAs!</blockquote>
