--- a/content/content/lectures/part1/01_welcome.md.erb
+++ b/content/content/lectures/part1/01_welcome.md.erb
@@ -6,13 +6,10 @@ cat: general
 homework: 1) Setup linux if needed; 2) Install Ruby; 3) Go through Ruby the hard way
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
 <%= callout("Note for first day of class:", " Each day of class has a page on this web site. The first section of that page is always the homework due on that very day. So in other words, the homework listed here is actually 'pre-work' for day one. We will go over this in a little more detail during class.") %>
 
-1. **Linux Parition**: Over the years, developing Ruby and Sinatra on Windows has been a less than pleasant experience, in fact a massive headache. You should seriously consider setting up Here is why and how: <%= link_to_topic :linux_partition %>. Another option is to use VMWare.
-
-1. **Ruby Install**: Install Ruby 2.5. Here are my Ruby installation instructions: <%= link_to_topic :ruby_install_tips %>
+1. **Development Environment**: It is very important that you take time before class to get your development environment set up and reliable. Please install the software just as I say. Not because I want to be bossy but because I know from bitter experience that while things may seem ok, later on you will hit problems. Sadly this is especially true on Microsoft Windows. Install Ruby 2.5. Here are my Ruby installation instructions: <%= link_to_topic :cosi105b_ruby_install_tips %>
 
 1. **Ruby**: Review your Ruby knowledge by going through [Learn Ruby The Hard Way](http://learnrubythehardway.org/book/preface.html). You should be at least up to Lesson 23. This will cover many of the basics up to functions. There is nothing to hand in here. But it's crucial that you really do the lessons and try the hands on work. No reading on your phone while on the treadmill! You shoring up the foundations on which your success in this course will be built!
 
