Update preparing for 2019

--- a/content/content/extras/03_review.md.erb
+++ b/content/content/extras/03_review.md.erb
@@ -8,7 +8,7 @@ homework: nT Version 0.5
 * Complete nT 0.5 functionality 
   * See <%= link_to_topic :nt_outline %>: "Performance Tuning (nt version 0.4)"
   * Of course this assumes that you have fully completed last week's assignment for nT 0.4
-  * Work should be done in your <%= link_to_intro :portfolio %>, directory `/nanotwitter`. When complete, submit it to github. You should use the same github repo but tag the previous version as 0.4 and the current version of 0.5. (See [Git Tagging](http://git-scm.com/book/tr/v2/Git-Basics-Tagging))
+  * When complete, submit it to github. You should use the same github repo but tag the previous version as 0.4 and the current version of 0.5. (See [Git Tagging](http://git-scm.com/book/tr/v2/Git-Basics-Tagging))
   * Team Interim Report: Write a report describing process so far, and results of initial tests (from your lab notebook).
   * <%= team_deliverable "Team interim report, 1-2 pages, pdf, including completed nanoTwitter Version 0.3 github URL" %>
 
