--- a/content/content/extras/03_software_design.md.erb
+++ b/content/content/extras/03_software_design.md.erb
@@ -6,8 +6,7 @@ cat: design
 ---
 <%= homework_hdr %>
 
-1. Study \[POODR\] Chapter 4. This is a difficult chapter. Make sure you have focused time to study it and follow along the coding samples in your <%= link_to_intro :portfolio %> directory `POODR`<%= deliverable "Locate and submit \\[POODR\\] Chapter 4 Warmup Questions in Latte" %>
-1. Complete and submit <%= link_to_topic :pa_movies_2 %> as usual, in a directory called `movies-2` in your <%= link_to_intro :portfolio %>. Look closely at the end of (PA) Movies Part 2 where two deliverables are specified.<%= deliverable "Submit them to Latte." %>
+1. Study \[POODR\] Chapter 4. This is a difficult chapter. Make sure you have focused time to study it and follow along the coding samples. <%= deliverable "Locate and submit \\[POODR\\] Chapter 4 Warmup Questions in Latte" %>
 
 #### Homework Discussion
 * Look at some of the questions asked in \[POODR\] work
