--- a/content/content/lectures/part1/04_webservers.md.erb
+++ b/content/content/lectures/part1/04_webservers.md.erb
@@ -1,16 +1,11 @@
 ---
 title: Sinatra Web Servers
 desc: With that foundation, we now look deeper at how web servers work and Sinatra
-homework: 1) First draft of PA_MAZES
+homework: TBD
 cat: web
 ---
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
-
-1. <%= partbadge %> Begin working on the famous <%= link_to_topic :pa_mazes %>. This assignment is a little different, requiring you to get good with writing a more complicated algorithm than before. Do the work in your <%= link_to_intro :portfolio %>. Start a new top level directory for this second PA, i.e. `../cs166b_cburkh/mazes`. It will be due next class. <%= deliverable "We will inspect your dropbox portfolio's mazes directory. Don't wait till next class!" %>
-
-#### Discussion
-* Discussion about Ruby the Hard Way. Discussion about Mazes.
 
 <%= include_topic :how_web_servers_work %>
 
