--- a/content/content/lectures/part1/01_welcome.md.erb
+++ b/content/content/lectures/part1/01_welcome.md.erb
@@ -1,9 +1,8 @@
 ---
 title: Welcome
 desc: Introductions and logistics; we talk about how the course will work, grading, lectures, homeworks and so 
-homework: 1) Make sure your computer is properly set up! 2) Begin working on the ruby Programming Assignment
+homework: 1) Make sure your development environmant is set up! 2) Review Ruby
 cat: general
-homework: 1) Setup linux if needed; 2) Install Ruby; 3) Go through Ruby the hard way
 ---
 <%= homework_hdr %>
 
@@ -43,7 +42,6 @@ homework: 1) Setup linux if needed; 2) Install Ruby; 3) Go through Ruby the hard
 #### Homework Info
 * Yes there is a fair bit of homework
 * Where to find it and how to hand it in: <%= link_to_topic :homework %>
-* We use a portfolio for some of the homework: <%= link_to_intro :portfolio %>.
 * Here's more information about <%= link_to_background :grading %>
 
 #### Project
