more prep for 2019

--- a/content/content/lectures/part2/02_nt_intro.md.erb
+++ b/content/content/lectures/part2/02_nt_intro.md.erb
@@ -6,7 +6,7 @@ cat: web
 ---
 <%= homework_hdr %>
 
-1. <%= codebadge %> Implement the Sinatra Twitterwhack project
+1. <%= zipbadge %> Implement the Sinatra Twitterwhack project
 	* Here are the detailed instructions: <%= link_to_topic :pa_twitterwhack %>
 	* Try and pay attention to object design and unit tests!
 	* Please record a brief <%= link_to_topic :screencast %> illustrating your app in action, and add a link to the screencast in the README.
