--- a/content/content/lectures/part2/03_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/03_sinatra_architecture.md.erb
@@ -27,7 +27,7 @@ cat: web
   * Millions of fans are constantly refreshing page to see current score in real time as the game progresses
   * A local official enters stats as the game progresses
   * Default implementation with a single "monolythic" app
-  * How things break down
+  * How will things break down
 * Divide into two services: Fan user interface app
   * All scores are stored in a static JSON file on disk, "latest_scores.json"
   * Read only. This app never writes
