--- a/content/content/lectures/part3/25_tuning_scale.md.erb
+++ b/content/content/lectures/part3/25_tuning_scale.md.erb
@@ -5,7 +5,6 @@ desc: What are some of the key ways in which a system can fail to scale?
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>:Participation <%= timebadge %>:Early <%= pdfbadge %>:PDF <%=codebadge %>:Code
 
 1. <%= pdfbadge %> View [Twitter: From Ruby on Rails to the JVM](http://youtu.be/ohHdZXnsNi8) AND [Real Time Delivery Architecture at Twitter](http://www.infoq.com/presentations/Real-Time-Delivery-Twitter).
     * These two talks give you a preliminary sense of what a real-world scalable architecture looks like. Many of the concepts, optimizations, design choices will apply in many other scenarios. Beware, there is a lot of depth here. It will be easy to understand superficially and hard to really understand. As you read this, please draw a architectural diagram of Twitter as you understand it, with as much detail as you can. No more than 20 diagram boxes though. Add labels and comments as needed. You can draw neatly on paper, or use some tool to make a diagram, whatever you prefer.
@@ -18,9 +17,11 @@ cat: scale
 * [How I test my rails applicatons](https://m.patrikonrails.com/how-i-test-my-rails-applications-cf150e347a6b)
 * [Sinatra Best Practices](https://blog.carbonfive.com/2013/06/24/sinatra-best-practices-part-one/)
 
-
 #### Discussion
 * Lets look at some of your diagrams. Who wants to volunteer?
 * Difference between displaying a tweet on a user's timeline and a tweet as a result of a search
 
 <%= include_topic :tuning_scalability %>
+
+#### Next Class
+* Look at homework: <%= link_to_next_lecture %>
