--- a/content/content/lectures/part1/05_welcome.md.erb
+++ b/content/content/lectures/part1/05_welcome.md.erb
@@ -12,7 +12,7 @@ cat: general
 
 1. **Ruby**: Review your Ruby knowledge by going through [Learn Ruby The Hard Way](http://learnrubythehardway.org/book/preface.html). You should be at least up to Lesson 23. This will cover many of the basics up to functions. There is nothing to hand in here. But it's crucial that you really do the lessons and try the hands on work. No reading on your phone while on the treadmill! You shoring up the foundations on which your success in this course will be built!
 
-#### Introductions
+#### Introductions`
 * Introduce Pito, and how I ended up here. Look at: <%= link_to_topic :pitofaq %>
 * Why do I do this? My commitment to teaching and student learning.
 * TAs introduce themselves
@@ -32,7 +32,7 @@ cat: general
 * Let's take a tour of [Latte for this course](https://moodle2.brandeis.edu/course/view.php?id=11167)
 
 #### Recitation
-<%= callout("NB", " Every Tuesday from 5:00pm to 6:50pm we have a lab/workshop in Goldsmith 317") %>
+<%= callout("NB", " Every Wednesday 5:00 PM–6:20 PM we have a lab/workshop") %>
 * My experience teaching this course is that most of you will need this to be successful.
 * There is no lecture. Sometimes there's a hands-on workshop. Other times you work on your projects or homework. Either way we are available to help out (usually it's homework related.)
 
